@@ -38,4 +38,5 @@ BUGFIXES:
 021 ==> 376913 - Can't create a new album in picasa/googlephoto.
 022 ==> 404896 - Vertical video are displayed horizontally.
 023 ==> 404859 - Using Batch Queue Manager to make a JPG copy of the images on completion the "arw" images are no longer visible in the originating album.
-024 ==> 
+024 ==> 404893 - Digikam::DigikamApp::slotSolidDeviceChanged: slotSolidDeviceChanged: messages referring to directory that digikam should not care about.
+025 ==> 
